# AcmeRobotics-PerceptionModule

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  compile_commands.json
.cache/clangd/index/: Camera.h.A0BE031B1975F1EF.idx  OpenCVProcessor.h.E97BCA848D906CBB.idx  YOLO.h.0F6A37BCBC297074.idx  test_main.cpp.9FCF4AA6177506F7.idx
.github/workflows/: ci.yml  codecov.yml
docs/html/search/: pages_0.js
documentation/html/: md_README.html  pages.html
documentation/html/search/: all_0.js
documentation/latex/: md_README.tex  refman.tex
include/: Camera.h  CoordToWorld.h  OpenCVProcessor.h  YOLO.h
lib/: Camera.cpp  CoordToWorld.cpp  OpenCVProcessor.cpp  YOLO.cpp
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
